--- a/020magic.ipynb
+++ b/020magic.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "020magic.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPypjNw6q8bFLrdp9N0XXZi",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOmzROtQX0IGW2uy3H7mUE/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +35,7 @@
         "# はじめに\n",
         "`Colab`のノートブックのコードセルでは`Python`が使えるだけでなく、`magic`コマンドが使えるとのこと。`magic`コマンドはいろんなことができるみたいなので、`Colab`で実験しながら勉強する。\n",
         "\n",
-        "読まれるかたもぜひ`Open in Colab`ボタンを押して、自分で実験しながら読んで欲しい。"
+        "このノートブックを読む人は、ぜひ`Open in Colab`ボタンを押して、自分で実験しながら読んで欲しい。"
       ]
     },
     {
@@ -45,7 +46,7 @@
       },
       "source": [
         "# %lsmagicと%lsmagic?\n",
-        "`%lsmagic`でまずはどんなコマンドがあるか確認"
+        "`%lsmagic`でまずどんなコマンドがあるか確認"
       ]
     },
     {
@@ -61,7 +62,7 @@
         "outputId": "f234fcbf-2144-4a39-89b7-c6ea604d65f7"
       },
       "source": [
-        "# まずはどんなコマンドがあるか確認\n",
+        "# まずどんなコマンドがあるか確認\n",
         "%lsmagic"
       ],
       "execution_count": null,
@@ -235,9 +236,18 @@
         "\n",
         "%%!  %%HTML  %%SVG  %%bash  %%bigquery  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%shell  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
         "\n",
-        "`automagic`がオンのときは、ラインマジックに`%`は必要ないが、ラインコマンド`automagic`はトグルスイッチで、実際には状態がわからないので、常に`%`をつける必要がある。\n",
-        "\n",
-        "マジックコマンドに`?`をつけることで簡単な説明が得られる。\n"
+        "`automagic`がオンのときは、ラインマジックに`%`は必要ないとのこと。まあ、どっちでもよい。=> `%automagic`コマンド自体がトグルスイッチ。明示的にオンとかオフとかにするときには、`on`、`off`、`1`、`0`、`True`、 `False`を引数として与える。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SYLifCmsV2Qq",
+        "colab_type": "text"
+      },
+      "source": [
+        "## ヘルプコマンド\n",
+        "マジックコマンドに`?`とか`??`をつけることで簡単な説明が得られる。仮にヘルプコマンドと呼ぼう。\n"
       ]
     },
     {
@@ -248,91 +258,173 @@
         "colab": {}
       },
       "source": [
-        "%lsmagic?\n",
-        "\n"
+        "# %lsmagic? とか %lsmagic?? とかやってみる\n",
+        "# %lsmagic?"
       ],
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K9JZWEfPWH97",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%%writefile?"
+      ],
+      "execution_count": 180,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UoTEvksh8Hkf",
+        "id": "bTKvxhAGVSxZ",
         "colab_type": "text"
       },
       "source": [
-        "`lsmagic`の説明\n",
+        "### magicコマンドのDocstring\n",
+        "```\n",
+        "%alias? Define an alias for a system command.\n",
+        "%alias_magic? Create an alias for an existing line or cell magic.\n",
+        "%autocall? Make functions callable without having to type parentheses.\n",
+        "%automagic? Make magic functions callable without having to type the initial %.\n",
+        "%autosave? Set the autosave interval in the notebook (in seconds).\n",
+        "%bookmark? Manage IPython's bookmark system.\n",
+        "%cat? Repr: <alias cat for 'cat'>\n",
+        "%cd? Change the current working directory.\n",
+        "%clear? Clear the terminal.\n",
+        "%colors? Switch color scheme for prompts, info system and exception handlers.\n",
+        "%config? configure IPython\n",
+        "%connect_info? Print information for connecting other clients to this kernel\n",
+        "%cp? Repr: <alias cp for 'cp'>\n",
+        "%debug? Activate the interactive debugger.\n",
+        "%dhist? Print your history of visited directories.\n",
+        "%dirs? Return the current directory stack.\n",
+        "%doctest_mode? Toggle doctest mode on and off.\n",
+        "%ed? Alias for `%edit`.\n",
+        "%edit? Bring up an editor and execute the resulting code.\n",
+        "%env? Get, set, or list environment variables.\n",
+        "%gui? Enable or disable IPython GUI event loop integration.\n",
+        "%hist? Alias for `%history`.\n",
+        "%history? Print input history (_i<n> variables), with most recent last.\n",
+        "%killbgscripts? ill all BG processes started by %%script and its family.\n",
+        "%ldir? Repr: <alias ldir for 'ls -F -o --color %l | grep /$'>\n",
+        "%less? Show a file through the pager.\n",
+        "%lf? Repr: <alias lf for 'ls -F -o --color %l | grep ^-'>\n",
+        "%lk? Repr: <alias lk for 'ls -F -o --color %l | grep ^l'>\n",
+        "%ll? Repr: <alias ll for 'ls -F -o --color'>\n",
+        "%load? Load code into the current frontend.\n",
+        "%load_ext? Load an IPython extension by its module name.\n",
+        "%loadpy? Alias of `%load`\n",
+        "%logoff? Temporarily stop logging.\n",
+        "%logon? Restart logging.\n",
+        "%logstart? Start logging anywhere in a session.\n",
+        "%logstate? Print the status of the logging system.\n",
+        "%logstop? Fully stop logging and close log file.\n",
+        "%ls? Repr: <alias ls for 'ls -F --color'>\n",
+        "%lsmagic? List currently available magic functions.\n",
+        "%lx? Repr: <alias lx for 'ls -F -o --color %l | grep ^-..x'>\n",
+        "%macro? Define a macro for future re-execution. It accepts ranges of history, filenames or string objects.\n",
+        "%magic? Print information about the magic function system.\n",
+        "%man? Find the man page for the given command and display in pager.\n",
+        "%matplotlib? Set up matplotlib to work interactively.\n",
+        "%mkdir? Repr: <alias mkdir for 'mkdir'>\n",
+        "%more? Show a file through the pager.\n",
+        "%mv? Repr: <alias mv for 'mv'>\n",
+        "%notebook? Export and convert IPython notebooks.\n",
+        "%page? Pretty print the object and display it through a pager.\n",
+        "%pastebin? Upload code to Github's Gist paste bin, returning the URL.\n",
+        "%pdb? Control the automatic calling of the pdb interactive debugger.\n",
+        "%pdef? Print the call signature for any callable object.\n",
+        "%pdoc? Print the docstring for an object.\n",
+        "%pfile? Print (or run through pager) the file where an object is defined.\n",
+        "%pinfo? Provide detailed information about an object.\n",
+        "%pinfo2? Provide extra detailed information about an object.\n",
+        "%pip? Install a package in the current kernel using pip.\n",
+        "%popd? Change to directory popped off the top of the stack.\n",
+        "%pprint? Toggle pretty printing on/off.\n",
+        "%precision? Set floating point precision for pretty printing.\n",
+        "%prun? Run a statement through the python code profiler.\n",
+        "%psearch? Search for object in namespaces by wildcard.\n",
+        "%psource? Print (or run through pager) the source code for an object.\n",
+        "%pushd? lace the current dir on stack and change directory.\n",
+        "%pwd? Return the current working directory path.\n",
+        "%pycat? Show a syntax-highlighted file through a pag\n",
+        "%pylab? Load numpy and matplotlib to work interactively.\n",
+        "%qtconsole? Open a qtconsole connected to this kernel.\n",
+        "%quickref? Show a quick reference sheet \n",
+        "%recall? Repeat a command, or get command to input line for editing.\n",
+        "%rehashx? Update the alias table with all executable files in $PATH.\n",
+        "%reload_ext? Reload an IPython extension by its module name.\n",
+        "%rep? Docstring: Alias for `%recall`.\n",
+        "%rerun? Re-run previous input\n",
+        "%reset? Resets the namespace by removing all names defined by the user, if called without arguments\n",
+        "%reset_selective? Resets the namespace by removing names defined by the user.\n",
+        "%rm? Repr: <alias rm for 'rm'>\n",
+        "%rmdir? Repr: <alias rmdir for 'rmdir'>\n",
+        "%run? Run the named file inside IPython as a program.\n",
+        "%save? Save a set of lines or a macro to a given filename.\n",
+        "%sc? Shell capture - run shell command and capture output (DEPRECATED use !).\n",
+        "%set_env? Set environment variables. \n",
+        "%shell? Runs a shell command, allowing input to be provided.\n",
+        "%store? Lightweight persistence for python variables.\n",
+        "%sx? Shell execute - run shell command and capture output (!! is short-hand).\n",
+        "%system? Shell execute - run shell command and capture output (!! is short-hand).\n",
+        "%tb? Print the last traceback with the currently active exception mode.\n",
+        "%tensorflow_version? Implements the tensorflow_version line magic.\n",
+        "%time? Time execution of a Python statement or expression.\n",
+        "%timeit? Time execution of a Python statement or expression\n",
+        "%unalias? Remove an alias\n",
+        "%unload_ext? Unload an IPython extension by its module name.\n",
+        "%who? Print all interactive variables, with some minimal formatting.\n",
+        "%who_ls? Return a sorted list of all interactive variables.\n",
+        "%whos? Like %who, but gives some extra information about each variable.\n",
+        "%xdel? Delete a variable, trying to clear it from anywhere that IPython's machinery has references to it. \n",
+        "%xmode? Switch modes for the exception handlers.\n",
         "\n",
-        "Docstring: List currently available magic functions.\n",
+        "%%HTML? Alias for `%%html`.\n",
+        "%%SVG? Alias for `%%svg`.\n",
+        "%%bash? %%bash script magic\n",
+        "%%bigquery? Underlying function for bigquery cell magic\n",
+        "%%capture? run the cell, capturing stdout, stderr, and IPython's rich display() calls.\n",
+        "%%debug? Activate the interactive debugger.\n",
+        "%%file? Alias for `%%writefile`.\n",
+        "%%html? ender the cell as a block of HTML\n",
+        "%%javascript? Run the cell block of Javascript code\n",
+        "%%js? Alias of `%%javascript`\n",
+        "%%latex? Render the cell as a block of latex\n",
+        "%%perl? %%perl script magic\n",
+        "%%prun? Run a statement through the python code profiler.\n",
+        "%%pypy? %%pypy script magic\n",
+        "%%python?  Run cells with python in a subprocess.\n",
+        "%%python2? Run cells with python2 in a subprocess.\n",
+        "%%python3? Run cells with python3 in a subprocess.\n",
+        "%%ruby? Run cells with ruby in a subprocess.\n",
+        "%%script? Run a cell via a shell command\n",
+        "%%sh? Run cells with sh in a subprocess.\n",
+        "%%shell? Run the cell via a shell command, allowing input to be provided.\n",
+        "%%svg? Render the cell as an SVG literal\n",
+        "%%sx? Shell execute - run shell command and capture output (!! is short-hand).\n",
+        "%%system? Shell execute - run shell command and capture output (!! is short-hand).\n",
+        "%%time? Time execution of a Python statement or expression.\n",
+        "%%timeit? Time execution of a Python statement or expression\n",
+        "%%writefile? Write the contents of the cell to a file.\n",
         "\n",
-        "ドックストリング: 現在使えるマジック関数をリストする。\n",
         "\n",
-        "とのこと。"
+        "\n",
+        "```"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9E26YEMd8rvq",
+        "id": "uBl0EpCikwaO",
         "colab_type": "text"
       },
       "source": [
-        "## %time\n",
-        "Docstring:\n",
-        "Time execution of a Python statement or expression.\n",
-        "\n",
-        "The CPU and wall clock times are printed, and the value of the\n",
-        "expression (if any) is returned.  Note that under Win32, system time\n",
-        "is always reported as 0, since it can not be measured.\n",
-        "\n",
-        "This function can be used both as a line and cell magic:\n",
-        "\n",
-        "- In line mode you can time a single-line statement (though multiple\n",
-        "  ones can be chained with using semicolons).\n",
-        "\n",
-        "- In cell mode, you can time the cell body (a directly \n",
-        "  following statement raises an error).\n",
-        "\n",
-        "This function provides very basic timing functionality.  Use the timeit \n",
-        "magic for more control over the measurement.\n",
-        "\n",
-        "Examples\n",
-        "--------\n",
-        "::\n",
-        "\n",
-        "  In [1]: %time 2**128\n",
-        "  CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
-        "  Wall time: 0.00\n",
-        "  Out[1]: 340282366920938463463374607431768211456L\n",
-        "\n",
-        "  In [2]: n = 1000000\n",
-        "\n",
-        "  In [3]: %time sum(range(n))\n",
-        "  CPU times: user 1.20 s, sys: 0.05 s, total: 1.25 s\n",
-        "  Wall time: 1.37\n",
-        "  Out[3]: 499999500000L\n",
-        "\n",
-        "  In [4]: %time print 'hello world'\n",
-        "  hello world\n",
-        "  CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
-        "  Wall time: 0.00\n",
-        "\n",
-        "  Note that the time needed by Python to compile the given expression\n",
-        "  will be reported if it is more than 0.1s.  In this example, the\n",
-        "  actual exponentiation is done by Python at compilation time, so while\n",
-        "  the expression can take a noticeable amount of time to compute, that\n",
-        "  time is purely due to the compilation:\n",
-        "\n",
-        "  In [5]: %time 3**9999;\n",
-        "  CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
-        "  Wall time: 0.00 s\n",
-        "\n",
-        "  In [6]: %time 3**999999;\n",
-        "  CPU times: user 0.00 s, sys: 0.00 s, total: 0.00 s\n",
-        "  Wall time: 0.00 s\n",
-        "  Compiler : 0.78 s\n",
-        "  \n",
-        "File:      /usr/local/lib/python3.6/dist-packages/IPython/core/magics/execution.py"
+        ""
       ]
     }
   ]
