--- a/010pytute001.ipynb
+++ b/010pytute001.ipynb
@@ -49,7 +49,9 @@
         "1. このファイルは https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/010pytute001.ipynb\n",
         "2. 目的 Chainer Tutorial のPython入門の部分を焼き直してPython入門のColab用ファイルを作る。\n",
         "3. 文体をですますから変える。\n",
-        "4. 読者はColabで開き、すべてのコードを実行、実験しながら進むことを想定する。"
+        "4. 読者はColabで開き、すべてのコードを実行、実験しながら進むことを想定する。\n",
+        "5. 元の`Chainer Tutorial`が機械学習の導入なのでそちらも取り込むかもしれない。\n",
+        "6. プログラム言語学習として`Python`が優れているとは考えない。むしろ機械学習の流行によって`Python`が過大評価されて、世界の知的レベルは下がっていると思う。たとえば`Haskell`の学習にこの環境を使うことを考えたい。"
       ]
     },
     {
