--- a/pythontutorial.ipynb
+++ b/pythontutorial.ipynb
@@ -56,10 +56,10 @@
       },
       "source": [
         "### メモ\n",
-        "1. このファイルは https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/010pytute001.ipynb\n",
+        "1. このファイルは hhttps://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/pythontutorial.ipynb\n",
         "2. 目的 Chainer Tutorial のPython入門の部分を焼き直してPython入門のColab用ファイルを作る。\n",
-        "3. 文体をですますから変える。\n",
-        "4. 読者はColabで開き、すべてのコードを実行、実験しながら進むことを想定する。\n",
+        "3. 文体を変える。例題を変える。\n",
+        "4. 読者はColabで開き、コードを実行、実験しながら進むことを想定する。\n",
         "5. 元の`Chainer Tutorial`が機械学習の導入なのでそちらも取り込むかもしれない。\n",
         "6. プログラム言語学習として`Python`が優れているとは考えない。むしろ機械学習の流行によって`Python`が過大評価されて、世界の知的レベルは下がっていると思う。たとえば`Haskell`の学習にこの環境を使うことを考えたい。\n",
         "\n",
@@ -104,75 +104,6 @@
         "いまのところ思いつくのそれくらいだが、成果物をつくりながら付け足していく。\n",
         "\n",
         "とりあえずスタートする。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cNPCfLlxzkF0",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Colabのキーボード・ショートカット\n",
-        "### 一般  \n",
-        "Ctrl+Shift+P コマンドパレットを開く。  \n",
-        "Ctrl+M H キーボード・ショートカットを表示する。  \n",
-        "Ctrl+M F フォームビュー。  \n",
-        "  \n",
-        "### ファイル管理  \n",
-        "Ctrl+N 新規ノートブック。  \n",
-        "Ctrl+O ノートブックを開く。  \n",
-        "Ctrl+S ノートブックを保存。  \n",
-        "Ctrl+P ノートブックを印刷。  \n",
-        "Ctrl+M S 変更内容を保存して固定。  \n",
-        "  \n",
-        "###セルの実行  \n",
-        "Ctrl+F9 すべてのセルを実行。  \n",
-        "Ctrl+F8 前のセルを実行。  \n",
-        "Ctrl+Enter セルを実行。  \n",
-        "Ctrl+Shift+Enter 選択範囲を実行。  \n",
-        "Ctrl+F10 以降のセルを実行。  \n",
-        "Alt+Enter セルを実行して新しいセルを挿入。  \n",
-        "Shift+Enter セルを実行して次のセルを選択。  \n",
-        "Ctrl+M I 実行を中断。  \n",
-        "Ctrl+M . ランタイムを再起動。  \n",
-        "  \n",
-        "  \n",
-        "### 基本編集操作  \n",
-        "Ctrl+M A 上にコードセルを挿入。  \n",
-        "Ctrl+M B 下にコードセルを挿入。  \n",
-        "(Ctrl+M T) 下にテキストセルを挿入。  \n",
-        "Ctrl+M K 選択したセルを上に移動。  \n",
-        "Ctrl+M J 選択したセルを下に移動。  \n",
-        "Ctrl+M D 選択したセルを削除。  \n",
-        "Ctrl+M O 出力の表示(トグル)。  \n",
-        "Ctrl+M P 前のセル。  \n",
-        "Ctrl+M N 次のセル。  \n",
-        "Ctrl+Shift+A すべてのセルを選択。  \n",
-        "Shift+Up 選択範囲に前のセルを含める。  \n",
-        "Shift+Down 選択範囲に次のセルを含める。  \n",
-        "Ctrl+Alt+N スクラッチ・コード・セルを開く。  \n",
-        "Ctrl+M Z 元に戻す(undo)。  \n",
-        "Ctrl+Shift+Y セルの操作をやり直す(redo)。  \n",
-        "Ctrl+Click セルの選択/解除(トグル)。  \n",
-        "Esc セルの選択を解除。  \n",
-        "Ctrl+M M セルをテキストセルに変換。  \n",
-        "Ctrl+M Y セルをコードセルに変換。  \n",
-        "Ctrl+[ 折りたたみ/展開。  \n",
-        "Ctrl+' セクションの展開/折りたたみ(トグル)。  \n",
-        "Ctrl+Space or Tab オートコンプリート自動補完候補表示。  \n",
-        "Shift+Tab 行のインデントを解除。  \n",
-        "Ctrl+/ 行をコメントにする。  \n",
-        "Ctrl+Alt+M コメントを追加。  \n",
-        "Ctrl+M L 行番号の表示(トグル)。  \n",
-        "Shift+Click 複数のセルを選択。  \n",
-        "Ctrl+M - カーソル位置で分割。  \n",
-        "Ctrl+Alt+P コードスニペット。  \n",
-        "  \n",
-        "###検索と置換  \n",
-        "Ctrl+G グローバル検索。  \n",
-        "Ctrl+H グローバル置換。  \n",
-        "Ctrl+Shift+G 前をグローバル検索。  \n"
       ]
     },
     {
@@ -4777,19 +4708,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pVf-5jEnpD-J",
-        "colab_type": "text"
-      },
-      "source": [
-        "### 組み込み関数一覧\n",
-        "abs(), delattr(), hash(), memoryview(), set(), all(), dict(), help(), min(), setattr(), any(), dir(), hex(), next(), slice(), ascii(), divmod(), id(), object(), sorted(), bin(), enumerate(), input(), oct(), staticmethod(), bool(), eval(), int(), open(), str(), breakpoint(), exec(), isinstance(), ord(), sum(), bytearray(), filter(), issubclass(), pow(), super(), bytes(), float(), iter(), print(), tuple(), callable(), format(), len(), property(), type(), chr(), frozenset(), list(), range(), vars(), classmethod(), getattr(), locals(), repr(), zip(), compile(), globals(), map(), reversed(), __import__(), complex(), hasattr(), max(), round()\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "colab_type": "text",
         "id": "A8XpuE_av9dn"
       },
@@ -5989,10 +5907,103 @@
         "id": "mIPsXEy0v9d9"
       },
       "source": [
-        "# 参考サイト\n",
+        "# 参考\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4Vq4uB4V5ouH",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "### 参考サイト\n",
         "\n",
         "1. [Pythonチュートリアル](https://docs.python.org/ja/3/tutorial/index.html) (https://docs.python.org/ja/3/tutorial/index.html) \n",
         "2. [Chainer Tutorial](https://tutorials.chainer.org/ja/tutorial.html)(https://tutorials.chainer.org/ja/tutorial.html)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "-Vzy0VYj5SZe"
+      },
+      "source": [
+        "### 組み込み関数一覧\n",
+        "abs(), delattr(), hash(), memoryview(), set(), all(), dict(), help(), min(), setattr(), any(), dir(), hex(), next(), slice(), ascii(), divmod(), id(), object(), sorted(), bin(), enumerate(), input(), oct(), staticmethod(), bool(), eval(), int(), open(), str(), breakpoint(), exec(), isinstance(), ord(), sum(), bytearray(), filter(), issubclass(), pow(), super(), bytes(), float(), iter(), print(), tuple(), callable(), format(), len(), property(), type(), chr(), frozenset(), list(), range(), vars(), classmethod(), getattr(), locals(), repr(), zip(), compile(), globals(), map(), reversed(), __import__(), complex(), hasattr(), max(), round()\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "py6FBgGc563j"
+      },
+      "source": [
+        "## Colabのキーボード・ショートカット\n",
+        "### 一般  \n",
+        "Ctrl+Shift+P コマンドパレットを開く。  \n",
+        "Ctrl+M H キーボード・ショートカットを表示する。  \n",
+        "Ctrl+M F フォームビュー。  \n",
+        "  \n",
+        "### ファイル管理  \n",
+        "Ctrl+N 新規ノートブック。  \n",
+        "Ctrl+O ノートブックを開く。  \n",
+        "Ctrl+S ノートブックを保存。  \n",
+        "Ctrl+P ノートブックを印刷。  \n",
+        "Ctrl+M S 変更内容を保存して固定。  \n",
+        "  \n",
+        "###セルの実行  \n",
+        "Ctrl+F9 すべてのセルを実行。  \n",
+        "Ctrl+F8 前のセルを実行。  \n",
+        "Ctrl+Enter セルを実行。  \n",
+        "Ctrl+Shift+Enter 選択範囲を実行。  \n",
+        "Ctrl+F10 以降のセルを実行。  \n",
+        "Alt+Enter セルを実行して新しいセルを挿入。  \n",
+        "Shift+Enter セルを実行して次のセルを選択。  \n",
+        "Ctrl+M I 実行を中断。  \n",
+        "Ctrl+M . ランタイムを再起動。  \n",
+        "  \n",
+        "  \n",
+        "### 基本編集操作  \n",
+        "Ctrl+M A 上にコードセルを挿入。  \n",
+        "Ctrl+M B 下にコードセルを挿入。  \n",
+        "(Ctrl+M T) 下にテキストセルを挿入。  \n",
+        "Ctrl+M K 選択したセルを上に移動。  \n",
+        "Ctrl+M J 選択したセルを下に移動。  \n",
+        "Ctrl+M D 選択したセルを削除。  \n",
+        "Ctrl+M O 出力の表示(トグル)。  \n",
+        "Ctrl+M P 前のセル。  \n",
+        "Ctrl+M N 次のセル。  \n",
+        "Ctrl+Shift+A すべてのセルを選択。  \n",
+        "Shift+Up 選択範囲に前のセルを含める。  \n",
+        "Shift+Down 選択範囲に次のセルを含める。  \n",
+        "Ctrl+Alt+N スクラッチ・コード・セルを開く。  \n",
+        "Ctrl+M Z 元に戻す(undo)。  \n",
+        "Ctrl+Shift+Y セルの操作をやり直す(redo)。  \n",
+        "Ctrl+Click セルの選択/解除(トグル)。  \n",
+        "Esc セルの選択を解除。  \n",
+        "Ctrl+M M セルをテキストセルに変換。  \n",
+        "Ctrl+M Y セルをコードセルに変換。  \n",
+        "Ctrl+[ 折りたたみ/展開。  \n",
+        "Ctrl+' セクションの展開/折りたたみ(トグル)。  \n",
+        "Ctrl+Space or Tab オートコンプリート自動補完候補表示。  \n",
+        "Shift+Tab 行のインデントを解除。  \n",
+        "Ctrl+/ 行をコメントにする。  \n",
+        "Ctrl+Alt+M コメントを追加。  \n",
+        "Ctrl+M L 行番号の表示(トグル)。  \n",
+        "Shift+Click 複数のセルを選択。  \n",
+        "Ctrl+M - カーソル位置で分割。  \n",
+        "Ctrl+Alt+P コードスニペット。  \n",
+        "  \n",
+        "###検索と置換  \n",
+        "Ctrl+G グローバル検索。  \n",
+        "Ctrl+H グローバル置換。  \n",
+        "Ctrl+Shift+G 前をグローバル検索。  \n"
       ]
     }
   ]
