--- a/pythontutorial.ipynb
+++ b/pythontutorial.ipynb
@@ -56,7 +56,7 @@
       },
       "source": [
         "### メモ\n",
-        "1. このファイルは hhttps://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/pythontutorial.ipynb\n",
+        "1. このファイルは https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/pythontutorial.ipynb\n",
         "2. 目的 Chainer Tutorial のPython入門の部分を焼き直してPython入門のColab用ファイルを作る。\n",
         "3. 文体を変える。例題を変える。\n",
         "4. 読者はColabで開き、コードを実行、実験しながら進むことを想定する。\n",
