--- a/010markdown001.ipynb
+++ b/010markdown001.ipynb
@@ -6,7 +6,7 @@
       "name": "markdown001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOPQ2cJbhZPh7M83ZHlwX4A",
+      "authorship_tag": "ABX9TyNYPU/kMux08kr3v+xXcLM1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,37 +156,25 @@
         "\n",
         "アブラハムリンカーンの言葉：:\n",
         ">>\n",
-        "フランス語で失礼する\n",
+        "フランス語で   失礼する\n",
         "\n",
         "だがしかし!!!!\n",
         "\n",
         "サイトによっては`>`1つで引用のマークダウンがあって、`>>`とすると1つ余って表示されてしまう。\n",
         "\n",
-        "Colabではコードが別途コードセルに書くことになるで、引用はバッククォート3つのコード表示でとりあえず代用したい。スペース4個でも可だが、バッククォート3つの方が確実だろう。スペースも表示される。\n",
+        "Colabではコードが別途コードセルに書くことになるで、引用はバッククォート3つのコード表示でとりあえず代用したい。スペース4個でも可だが、バッククォート3つの方が確実だろう。スペースもフォーマットされずちゃんと表示される。\n",
         "```\n",
-        "    フランス語で失礼する\n",
+        "    フランス語で   失礼する\n",
         "```\n",
         "\n",
+        "単一のバッククォートで文章内のコードやコマンドを`ハイライト`できる。 \n",
         "\n",
+        "独立したブロック内にコードあるいはテキストをフォーマットするには、3 重のバッククォートを使用する。バッククォート内のテキストはフォーマットされない。\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "htvCoCVaYVru",
-        "colab_type": "text"
-      },
-      "source": [
-        "### コードの引用\n",
-        "\n",
-        "単一のバッククォートで文章内のコードやコマンドを引用できる。 バッククォート内のテキストはフォーマットされない。\n",
-        "\n",
-        "独立したブロック内にコードあるいはテキストをフォーマットするには、3 重のバッククォートを使用する。\n"
       ]
     },
     {
@@ -203,11 +191,11 @@
         "\n",
         "このやりかただとURLが見えなくなる。一方、URLが書かれているだけで自動的にリンクは生じるので、明示的にリンクを示したいときは、リンクを2回書けばよい。\n",
         "```\n",
-        "[Colab](https://colab.research.google.com)(https://colab.research.google.com)\n",
+        "[Colab](https://colab.research.google.com) (https://colab.research.google.com)\n",
         "```\n",
         "結果\n",
         "\n",
-        "[Colab](https://colab.research.google.com)(https://colab.research.google.com)\n"
+        "[Colab](https://colab.research.google.com) (https://colab.research.google.com)\n"
       ]
     },
     {
@@ -249,39 +237,20 @@
       "source": [
         "#### 入れ子になったリスト\n",
         "\n",
-        "1 つ以上のリストアイテムを他のアイテムの下にインデントすることで、入れ子になったリストを作成できる。\n",
-        "\n",
-        "GitHub上の Web のエディタあるいは [Atom](https://atom.io/) のようなモノスペースフォントを使うテキストエディタを使って入れ子になったリストを作成するには、リストが揃って見えるように編集する。 入れ子になったリストアイテムの前に空白を、リストマーカーの文字 (`-` または `*`) が直接上位のアイテム内のテキストの一文字目の下に来るように入力してください。\n",
-        "\n",
-        "    1. 最初のリストアイテム\n",
-        "       - 最初の入れ子になったリストアイテム\n",
-        "         - 2 番目の入れ子になったリストアイテム\n",
-        "    \n",
-        "\n",
-        "![並びがハイライトされた入れ子になったリスト](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/nested-list-alignment.png)\n",
-        "\n",
-        "![2 レベルの入れ子になったアイテムを持つリスト](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/nested-list-example-1.png)\n",
-        "\n",
-        "モノスペースフォントを使っていない GitHubのコメントエディタで入れ子になったリストを作成するには、入れ子になったリストのすぐ上にあるリストアイテムを見て、そのアイテムの内容の前にある文字数を数えます。 そして、その数だけ空白を入れ子になったリストアイテムの前に入力する。\n",
-        "\n",
-        "この例では、入れ子になったリストアイテムをリストアイテム `100. 最初のリストアイテム` の下に、最低 5 つの空白で入れ子になったリストアイテムをインデントさせることで追加できる。これは、`最初のリストアイテム`の前に 5 文字 (`100.` ) があるからです。\n",
-        "\n",
-        "    100. 最初のリストアイテム\n",
-        "         - 最初の入れ子になったリストアイテム\n",
-        "    \n",
-        "\n",
-        "![入れ子になったリストアイテムを持つリスト](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/nested-list-example-3.png)\n",
-        "\n",
-        "同じ方法で、複数レベルの入れ子になったリストを作成できる。 たとえば、最初の入れ子になったリストアイテムは内容である`最初の入れ子になったリストアイテム`の前に 7 つの空白 (`␣␣␣␣␣-␣`) があるため、2 番目の入れ子になったリストアイテムは 7 つの空白でインデントしなければならないでしょう。\n",
-        "\n",
-        "    100. 最初のリストアイテム\n",
-        "         - 最初の入れ子になったリストアイテム\n",
-        "           - 2 番目の入れ子になったリストアイテム\n",
-        "    \n",
-        "\n",
-        "![2 レベルの入れ子になったアイテムを持つリスト](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/nested-list-example-2.png)\n",
-        "\n",
-        "[GitHub Flavored Markdown の仕様](https://github.github.com/gfm/#example-265)には、もっと多くのサンプルがあります。\n"
+        "1つ以上のリストアイテムを他のアイテムの下にインデントすることで、入れ子になったリストを作成できる。\n",
+        "```\n",
+        "1. 最初のアイテム\n",
+        "    1. 次のアイテム\n",
+        "        1. これはどうだ\n",
+        "    1. もとにもどしてみる\n",
+        "1. 最後のアイテム\n",
+        "```\n",
+        "1. 最初のアイテム\n",
+        "    1. 次のアイテム\n",
+        "        1. これはどうだ\n",
+        "    1. もとにもどしてみる\n",
+        "1. 最後のアイテム\n",
+        "\n"
       ]
     },
     {
@@ -302,82 +271,27 @@
       },
       "source": [
         "\n",
-        "### タスクリスト\n",
+        "### タスクリスト(チェックボックス)\n",
+        "\n",
+        "タスクリスト(チェックボックス)\n",
         "タスクリストを作成するには、リストアイテムの前に空白を置き、その後に`[ ]`を続けてください。 タスクを完了したとマークするには`[x]`を使ってください。\n",
         "\n",
         "    - [x] Finish my changes\n",
         "    - [ ] Push my commits to GitHub\n",
         "    - [ ] Open a pull request\n",
         "    \n",
+        "     * [x] Finish my changes\n",
+        "     * [ ] Push my commits to GitHub\n",
+        "     * [ ] Open a pull request\n",
         "\n",
         "![表示されたタスクリスト](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/task-list-rendered.png)\n",
         "\n",
         "タスクリストアイテムの説明が括弧で始まる場合、その括弧を \"\\\\\" でエスケープする必要があります。\n",
         "\n",
         "`- [ ] \\(オプション) フォローアップの Issue のオープン`\n",
+        "- [ ] \\(オプション) フォローアップの Issue のオープン\n",
         "\n",
-        "詳しい情報については[タスクリストについて](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/about-task-lists)を参照してください。\n",
-        "\n",
-        "### 人や Team のメンション\n",
-        "GitHub上の人あるいは [Team](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/setting-up-teams) は、`@` に加えてユーザ名もしくは Team 名を入力することでメンションできる。 これによって通知が発生し、会話に注意してもらうことができる。 コメントを編集してユーザ名や Team 名をメンションすれば、人々に通知を受信してもらえます。 通知の詳細は、「[通知について](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/github/managing-subscriptions-and-notifications-on-github/about-notifications)」を参照してください。\n",
-        "\n",
-        "`@github/support これらのアップデートについてどう思いますか？`\n",
-        "\n",
-        "![表示された @メンション](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/mention-rendered.png)\n",
-        "\n",
-        "親チームにメンションすると、その子チームのメンバーも通知を受けることになり、複数のグループの人々とのコミュニケーションがシンプルになります。 詳しい情報については[Team について](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/about-teams)を参照してください。\n",
-        "\n",
-        "`@` シンボルを入力すると、プロジェクト上の人々あるいは Team のリストが現れます。 このリストは入力していくにつれて絞り込まれていくので、探している人あるいは Team の名前が見つかり次第、矢印キーを使ってその名前を選択し、Tab キーまたは Enter キーを押して名前の入力を完了できる。 Team については、@organization/team-name と入力すればそのチームの全メンバーにその会話をサブスクライブしてもらえます。\n",
-        "\n",
-        "オートコンプリートの結果は、リポジトリのコラボレータとそのスレッドのその他の参加者に限定される。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "le2-sepD4YTY",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "### Issue およびプルリクエストの参照\n",
-        "`#` を入力して、リポジトリ内のサジェストされた Issue およびプルリクエストのリストを表示させることができる。 Issue あるいはプルリクエストの番号あるいはタイトルを入力してリストをフィルタリングし、Tab キーまたは Enter キーを押して、ハイライトされた結果の入力を完了してください。\n",
-        "\n",
-        "詳しい情報については[自動リンクされた参照と URL](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/autolinked-references-and-urls) を参照してください。\n",
-        "\n",
-        "### 外部リソースの参照\\n\n",
-        "カスタムの自動リンク参照がリポジトリに設定されているなら、JIRAのIssueやZendeskのチケットのような外部リソースへの参照は、短縮リンクに変換される。 リポジトリで利用できる自動リンクを知るには、リポジトリの管理権限を持つ人に連絡してください。 詳しい情報については「[外部リソースを参照する自動リンクの設定](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/configuring-autolinks-to-reference-external-resources)」を参照してください。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZQeDiUa8DoIy",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "### コンテンツの添付\n",
-        "GitHub App には、登録されたドメインにリンクする URL に対する情報を GitHub 内で提供するものがあります。 GitHub は、アプリケーションが提供した情報を Issue あるいはプルリクエストのボディもしくはコメント中の URL の下に表示する。\n",
-        "\n",
-        "![コンテンツの添付](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/content-attachment.png)\n",
-        "\n",
-        "コンテンツの添付を見るには、リポジトリにインストールされた Content Attachments API を使う GitHub App が必要です。詳細は「[個人アカウントでアプリケーションをインストールする](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/installing-an-app-in-your-personal-account)」および「[Organization でアプリケーションをインストールする](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/installing-an-app-in-your-organization)」を参照してください。\n",
-        "\n",
-        "コンテンツの添付は、Markdown のリンクの一部になっている URL には表示されない。\n",
-        "\n",
-        "For more information about building a GitHub App that uses content attachments, see \"[Using Content Attachments](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/apps/using-content-attachments).\"\n",
-        "\n",
-        "### 絵文字の利用\n",
-        "`:EMOJICODE:` を入力して、書き込みに絵文字を追加できる。\n",
-        "\n",
-        "`@octocat :+1: このPRは素晴らしいです - マージできるね！ :shipit:`\n",
-        "\n",
-        "![表示された絵文字](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/emoji-rendered.png)\n",
-        "\n",
-        "`:` を入力すると、絵文字のサジェストリストが表示される。 このリストは、入力を進めるにつれて絞り込まれていくので、探している絵文字が見つかったら、**Tab** または **Enter** を押すと、ハイライトされているものが入力される。\n",
-        "\n",
-        "利用可能な絵文字とコードの完全なリストについては、[emoji-cheat-sheet.com](http://emoji-cheat-sheet.com/)を参照してください。\n"
+        "詳しい情報については[タスクリストについて](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/about-task-lists)を参照してください。\n"
       ]
     },
     {
@@ -387,18 +301,18 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "### パラグラフ\\n\n",
-        "テキスト行の間に空白行を残すことで、新しいパラグラフを作成できる。\n",
-        "\n",
-        "### Markdown のフォーマットの無視\n",
-        "GitHubに対し、Markdown のキャラクタの前に \"\\\\\" を使うことで、Markdown のフォーマットを無視 (エスケープ) させることができる\n",
-        "\n",
+        "### エスケープ\n",
+        "マークダウンのキャラクター(`*`とか`_`とか)の前に`\\` を使うことで、マークダウンのフォーマットを無視 (エスケープ) することができる 。\n",
+        "```\n",
         "`\\*新しいプロジェクト\\* を \\*古いプロジェクト\\* にリネームしましょう`\n",
         "\n",
-        "![表示されたエスケープキャラクタ](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/escaped-character-rendered.png)\n",
+        "**とか**です。\n",
+        "```\n",
         "\n",
-        "詳しい情報については Daring Fireball の [Markdown Syntax](https://daringfireball.net/projects/markdown/syntax#backslash) を参照してください。\n"
+        "\\*新しいプロジェクト\\* を \\*古いプロジェクト\\* にリネームしましょう\n",
+        "\n",
+        "**とか**です。\n",
+        "\n"
       ]
     },
     {
