--- a/010markdown001.ipynb
+++ b/010markdown001.ipynb
@@ -6,7 +6,7 @@
       "name": "markdown001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYPU/kMux08kr3v+xXcLM1",
+      "authorship_tag": "ABX9TyOCvvBTzmyAEOU2rpntuqwu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
         "```\n",
         "***太字かつ斜体はこうする。***\n",
         "```\n",
-        "    ***太字かつ斜体はこうする。***\n",
+        "***太字かつ斜体はこうする。***\n",
         "```\n",
         "**太字の中に _斜体_ はこうする。**\n",
         "```\n",
@@ -140,7 +140,7 @@
         "\n",
         "趣味の問題でもあるが、**太字**や*斜体*を多用すると画面がうるさくなると思う。\n",
         "\n",
-        "あと関連して、アルファベット alphabet や数字 3 の前後にスペースを入れるのは読みやすくはなるが、統一的にそうするのは自己管理がむずかしいので必須とはしたくない。コードの中置演算子の前後にスペースを置くことほどにも頑張らない。"
+        "関連して、アルファベット alphabet や数字 3 の前後にスペースを入れるのは読みやすくはなるが、統一的にそうするのは自己管理がむずかしいので必須とはしたくない。コードの中置演算子の前後にスペースを置くことほどにも頑張らない。"
       ]
     },
     {
@@ -209,23 +209,23 @@
         "\n",
         "1 つ以上の行の前に `-` または `*` を置くことで、順序なしリストを作成できる。\n",
         "```\n",
-        "- George Washington\n",
-        "- John Adams\n",
-        "- Thomas Jefferson\n",
+        "- 織田信長\n",
+        "- 豊臣秀吉\n",
+        "- 徳川家康\n",
         "```    \n",
-        "- George Washington\n",
-        "- John Adams\n",
-        "- Thomas Jefferson\n",
+        "- 織田信長\n",
+        "- 豊臣秀吉\n",
+        "- 徳川家康\n",
         "\n",
         "リストを順序付けするには、各行の前に数字を置く。書いた数字に関係なく最初に書いた数字からの連番になる。常に1を書くのが簡単かもしれない。\n",
         "```\n",
-        "5. James Madison\n",
-        "2. James Monroe\n",
-        "1. John Quincy Adams\n",
+        "5. 秀忠\n",
+        "2. 家光\n",
+        "1. 家綱\n",
         "```    \n",
-        "5. James Madison\n",
-        "2. James Monroe\n",
-        "1. John Quincy Adams"
+        "5. 秀忠\n",
+        "2. 家光\n",
+        "1. 家綱"
       ]
     },
     {
@@ -235,7 +235,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### 入れ子になったリスト\n",
+        "### 入れ子になったリスト\n",
         "\n",
         "1つ以上のリストアイテムを他のアイテムの下にインデントすることで、入れ子になったリストを作成できる。\n",
         "```\n",
@@ -256,16 +256,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hrgmZ5WoVywv",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1ucBl1FYVwih",
         "colab_type": "text"
       },
@@ -274,24 +264,17 @@
         "### タスクリスト(チェックボックス)\n",
         "\n",
         "タスクリスト(チェックボックス)\n",
-        "タスクリストを作成するには、リストアイテムの前に空白を置き、その後に`[ ]`を続けてください。 タスクを完了したとマークするには`[x]`を使ってください。\n",
+        "タスクリストを作成するには、リストアイテムの前に空白を置き、その後に`[ ]`を続ける。 タスクを完了したとマークするには`[x]`を使う。\n",
+        "```\n",
+        "- [x] Finish my changes\n",
+        "- [ ] Push my commits to GitHub\n",
+        "- [ ] Open a pull request\n",
+        "```\n",
+        " * [x] Finish my changes\n",
+        " * [ ] Push my commits to GitHub\n",
+        " * [ ] Open a pull request\n",
         "\n",
-        "    - [x] Finish my changes\n",
-        "    - [ ] Push my commits to GitHub\n",
-        "    - [ ] Open a pull request\n",
-        "    \n",
-        "     * [x] Finish my changes\n",
-        "     * [ ] Push my commits to GitHub\n",
-        "     * [ ] Open a pull request\n",
-        "\n",
-        "![表示されたタスクリスト](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/assets/images/help/writing/task-list-rendered.png)\n",
-        "\n",
-        "タスクリストアイテムの説明が括弧で始まる場合、その括弧を \"\\\\\" でエスケープする必要があります。\n",
-        "\n",
-        "`- [ ] \\(オプション) フォローアップの Issue のオープン`\n",
-        "- [ ] \\(オプション) フォローアップの Issue のオープン\n",
-        "\n",
-        "詳しい情報については[タスクリストについて](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/about-task-lists)を参照してください。\n"
+        "\n"
       ]
     },
     {
@@ -334,16 +317,16 @@
       "source": [
         "\n",
         "### 参考リンク\n",
-        "*   [GitHub Flavored Markdown の仕様](https://github.github.com/gfm/)(https://github.github.com/gfm/)\n",
+        "*   [GitHub Flavored Markdown の仕様](https://github.github.com/gfm/) (https://github.github.com/gfm/)\n",
         "*   [GitHub 上での書き込みと書式設定について](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/about-writing-and-formatting-on-github)(chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/about-writing-and-formatting-on-github)\n",
         "*   [高度なフォーマットを使用して作業する](chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/working-with-advanced-formatting)(chrome-extension://cjedbglnccaioiolemnfhjncicchinao/ja/articles/working-with-advanced-formatting)\n",
         "*   [Markdown をマスターする](https://guides.github.com/features/mastering-markdown/)(https://guides.github.com/features/mastering-markdown/)\n",
         "\n",
         "\n",
-        "Formatting text in Colaboratory: A guide to Colaboratory markdown\n",
+        "* Formatting text in Colaboratory: A guide to Colaboratory markdown\n",
         "https://colab.research.google.com/notebooks/markdown_guide.ipynb\n",
         "\n",
-        "https://docs.github.com/ja/github/writing-on-github/basic-writing-and-formatting-syntax\n",
+        "* https://docs.github.com/ja/github/writing-on-github/basic-writing-and-formatting-syntax\n",
         "\n"
       ]
     }
