--- a/010markdown001.ipynb
+++ b/010markdown001.ipynb
@@ -6,7 +6,7 @@
       "name": "markdown001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMXkDWWiDyOckgDs8dblvdq",
+      "authorship_tag": "ABX9TyO0FCC4iuCV9eTyGqTAtDtV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "source": [
         "### メモ\n",
         "1. ColabのマークダウンはGitHubのマークダウンと基本は同じだが違う。\n",
-        "2. 最大の違いは`html`を貼り付けられないこと。\n",
+        "2. 最大の違いは`html`を貼り付けられないこと。Colabのマークダウンでは`html`は使えない。コードセルで`%%html`magicを使うことになる。\n",
         "3. 細かい違いも、Colabだけを使用していると気にならないが、マークダウンにして他のサイトに貼り付けると表示がおかしい。\n",
         "4. 基本的には機能のほとんどないシンプルなマークダウンである。\n",
         "5. このファイルの読者はColabで開き、実験しながら進むことを想定する。セルをクリックしてセルの編集ボタンを押すか、セルをダブルクリックして編集に入り、上下もしくは左右に編集結果を並べながらテキストセルを編集することになる。編集から抜けるには`Esc`か、編集から抜ける(マークダウンエディタを閉じる)ボタンを押す。"
