--- a/010markdown001.ipynb
+++ b/010markdown001.ipynb
@@ -6,7 +6,7 @@
       "name": "markdown001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0FCC4iuCV9eTyGqTAtDtV",
+      "authorship_tag": "ABX9TyMeaYYW6KNaYO0mBFDIsXnl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
       },
       "source": [
         "### メモ\n",
-        "1. ColabのマークダウンはGitHubのマークダウンと基本は同じだが違う。\n",
+        "1. ColabのマークダウンはGitHubのマークダウンと基本は同じだが若干違う。\n",
         "2. 最大の違いは`html`を貼り付けられないこと。Colabのマークダウンでは`html`は使えない。コードセルで`%%html`magicを使うことになる。\n",
         "3. 細かい違いも、Colabだけを使用していると気にならないが、マークダウンにして他のサイトに貼り付けると表示がおかしい。\n",
         "4. 基本的には機能のほとんどないシンプルなマークダウンである。\n",
@@ -304,23 +304,23 @@
         "colab_type": "text"
       },
       "source": [
-        "## 数式\n",
+        "# 数式\n",
         "\n",
-        ">$y=x^2$\n",
+        "$y=x^2$\n",
         "\n",
-        ">$e^{i\\pi} + 1 = 0$\n",
+        "$e^{i\\pi} + 1 = 0$\n",
         "\n",
-        ">$e^x=\\sum_{i=0}^\\infty \\frac{1}{i!}x^i$\n",
+        "$e^x=\\sum_{i=0}^\\infty \\frac{1}{i!}x^i$\n",
         "\n",
-        ">$\\frac{n!}{k!(n-k)!} = {n \\choose k}$\n",
+        "$\\frac{n!}{k!(n-k)!} = {n \\choose k}$\n",
         "\n",
-        ">$A_{m,n} =\n",
-        " \\begin{pmatrix}\n",
-        "  a_{1,1} & a_{1,2} & \\cdots & a_{1,n} \\\\\n",
-        "  a_{2,1} & a_{2,2} & \\cdots & a_{2,n} \\\\\n",
-        "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
-        "  a_{m,1} & a_{m,2} & \\cdots & a_{m,n}\n",
-        " \\end{pmatrix}$\n"
+        "$A_{m,n} =\n",
+        "   \\begin{pmatrix}\n",
+        "      a_{1,1} & a_{1,2} & \\cdots & a_{1,n} \\\\\n",
+        "      a_{2,1} & a_{2,2} & \\cdots & a_{2,n} \\\\\n",
+        "      \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
+        "      a_{m,1} & a_{m,2} & \\cdots & a_{m,n}\n",
+        "   \\end{pmatrix}$\n"
       ]
     },
     {
@@ -330,26 +330,35 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "## 表\n",
-        ">```\n",
+        "# 表\n",
+        "```\n",
         "First column name | Second column name\n",
         "--- | ---\n",
         "Row 1, Col 1 | Row 1, Col 2\n",
         "Row 2, Col 1 | Row 2, Col 2\n",
         "```\n",
         "\n",
-        "becomes:\n",
         "\n",
-        ">First column name | Second column name\n",
-        ">--- | ---\n",
-        ">Row 1, Col 1 | Row 1, Col 2\n",
-        ">Row 2, Col 1 | Row 2, Col 2\n",
-        "\n",
-        "横線はダッシュ3つで描けます (\\-\\-\\-):\n",
-        "\n",
-        "---\n",
+        "First column name | Second column name\n",
+        "--- | ---\n",
+        "Row 1, Col 1 | Row 1, Col 2\n",
+        "Row 2, Col 1 | Row 2, Col 2\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4eSs8RGWA_7P",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "横線はダッシュ3つで描ける (\\-\\-\\-):\n",
+        "```\n",
+        "---\n",
+        "```\n",
+        "---\n"
       ]
     },
     {
