--- a/cellmagic.ipynb
+++ b/cellmagic.ipynb
@@ -6,7 +6,7 @@
       "name": "cellmagic.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAMdpxYC0WnkiaXC0FWuFe",
+      "authorship_tag": "ABX9TyNpc2tNnlQL0ujKGSTYefE0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,11 +42,11 @@
         "colab_type": "text"
       },
       "source": [
-        "# はじめに\n",
+        "# メモ\n",
         "\n",
-        "1. cell magicについて勉強する。\n",
+        "1. このノートブックでcell magicについて勉強する。\n",
         "2. 元にしたサイト`The cell magics in IPython`はipython notebookの説明のファイルのひとつだが、たぶん, Jupyter, Colabでも全く同じと思われる。\n",
-        "3. このファイル`cellmagic.ipynb`はColabで開かれ、コードを実行、変更、実験しながら読むことを想定している。"
+        "3. このノートブック`cellmagic.ipynb`はColabで開かれ、コードを実行、変更、実験しながら読むことを想定している。"
       ]
     },
     {
@@ -56,14 +56,16 @@
         "colab_type": "text"
       },
       "source": [
-        "Colabのコードセルでは`マジック(magic)`とよばれるコマンド群を実行することができる。\n",
+        "# はじめに\n",
+        "\n",
+        "Colabのコードセルではマジック(`magic`)とよばれるコマンド群を実行することができる。\n",
         "\n",
         "マジックは対話的に、コマンドラインで使ような感じで使える。\n",
         "\n",
         "マジックにはラインマジックとセルマジックの2種類がある。\n",
         "\n",
         "\n",
-        "* ラインマジックは`%`で始まり、行単位で使う。\n",
+        "* ラインマジックは`%`1つで始まり、行単位で使う。\n",
         "\n",
         "* セルマジックは2個のパーセント記号`%%`から始まり、ボディ部分を引数として受け取ることができる。セルの最初の行に書く必要があり、通常は効果の範囲もセルの範囲である。\n",
         "\n",
@@ -75,13 +77,168 @@
       "metadata": {
         "id": "c0IPBX8DXK86",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        },
+        "outputId": "817ac5da-0547-4e5c-8027-bace111b61e4"
       },
       "source": [
         "%lsmagic"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/json": {
+              "cell": {
+                "prun": "ExecutionMagics",
+                "file": "Other",
+                "!": "OSMagics",
+                "capture": "ExecutionMagics",
+                "timeit": "ExecutionMagics",
+                "script": "ScriptMagics",
+                "pypy": "Other",
+                "system": "OSMagics",
+                "perl": "Other",
+                "html": "DisplayMagics",
+                "bash": "Other",
+                "shell": "Other",
+                "HTML": "Other",
+                "python": "Other",
+                "SVG": "Other",
+                "javascript": "DisplayMagics",
+                "bigquery": "Other",
+                "js": "DisplayMagics",
+                "writefile": "OSMagics",
+                "ruby": "Other",
+                "python3": "Other",
+                "python2": "Other",
+                "latex": "DisplayMagics",
+                "sx": "OSMagics",
+                "svg": "DisplayMagics",
+                "sh": "Other",
+                "time": "ExecutionMagics",
+                "debug": "ExecutionMagics"
+              },
+              "line": {
+                "psource": "NamespaceMagics",
+                "logstart": "LoggingMagics",
+                "popd": "OSMagics",
+                "tensorflow_version": "Other",
+                "loadpy": "CodeMagics",
+                "colors": "BasicMagics",
+                "who_ls": "NamespaceMagics",
+                "lf": "Other",
+                "ll": "Other",
+                "pprint": "BasicMagics",
+                "lk": "Other",
+                "ls": "Other",
+                "save": "CodeMagics",
+                "tb": "ExecutionMagics",
+                "lx": "Other",
+                "pylab": "PylabMagics",
+                "killbgscripts": "ScriptMagics",
+                "quickref": "BasicMagics",
+                "magic": "BasicMagics",
+                "dhist": "OSMagics",
+                "edit": "KernelMagics",
+                "logstop": "LoggingMagics",
+                "gui": "BasicMagics",
+                "prun": "ExecutionMagics",
+                "debug": "ExecutionMagics",
+                "page": "BasicMagics",
+                "logstate": "LoggingMagics",
+                "ed": "Other",
+                "pushd": "OSMagics",
+                "timeit": "ExecutionMagics",
+                "set_env": "OSMagics",
+                "rehashx": "OSMagics",
+                "hist": "Other",
+                "qtconsole": "KernelMagics",
+                "rm": "Other",
+                "dirs": "OSMagics",
+                "run": "ExecutionMagics",
+                "reset_selective": "NamespaceMagics",
+                "pinfo2": "NamespaceMagics",
+                "matplotlib": "PylabMagics",
+                "unload_ext": "ExtensionMagics",
+                "doctest_mode": "BasicMagics",
+                "logoff": "LoggingMagics",
+                "reload_ext": "ExtensionMagics",
+                "pdb": "ExecutionMagics",
+                "load": "CodeMagics",
+                "lsmagic": "BasicMagics",
+                "autosave": "KernelMagics",
+                "cd": "OSMagics",
+                "pastebin": "CodeMagics",
+                "alias_magic": "BasicMagics",
+                "cp": "Other",
+                "autocall": "AutoMagics",
+                "ldir": "Other",
+                "bookmark": "OSMagics",
+                "connect_info": "KernelMagics",
+                "mkdir": "Other",
+                "system": "OSMagics",
+                "whos": "NamespaceMagics",
+                "rmdir": "Other",
+                "automagic": "AutoMagics",
+                "store": "StoreMagics",
+                "more": "KernelMagics",
+                "shell": "Other",
+                "pdef": "NamespaceMagics",
+                "precision": "BasicMagics",
+                "pinfo": "NamespaceMagics",
+                "pwd": "OSMagics",
+                "psearch": "NamespaceMagics",
+                "reset": "NamespaceMagics",
+                "recall": "HistoryMagics",
+                "xdel": "NamespaceMagics",
+                "xmode": "BasicMagics",
+                "cat": "Other",
+                "mv": "Other",
+                "rerun": "HistoryMagics",
+                "logon": "LoggingMagics",
+                "history": "HistoryMagics",
+                "pycat": "OSMagics",
+                "pip": "Other",
+                "unalias": "OSMagics",
+                "env": "OSMagics",
+                "load_ext": "ExtensionMagics",
+                "config": "ConfigMagics",
+                "profile": "BasicMagics",
+                "pfile": "NamespaceMagics",
+                "less": "KernelMagics",
+                "who": "NamespaceMagics",
+                "notebook": "BasicMagics",
+                "man": "KernelMagics",
+                "sx": "OSMagics",
+                "macro": "ExecutionMagics",
+                "clear": "KernelMagics",
+                "alias": "OSMagics",
+                "time": "ExecutionMagics",
+                "sc": "OSMagics",
+                "rep": "Other",
+                "pdoc": "NamespaceMagics"
+              }
+            },
+            "text/plain": [
+              "Available line magics:\n",
+              "%alias  %alias_magic  %autocall  %automagic  %autosave  %bookmark  %cat  %cd  %clear  %colors  %config  %connect_info  %cp  %debug  %dhist  %dirs  %doctest_mode  %ed  %edit  %env  %gui  %hist  %history  %killbgscripts  %ldir  %less  %lf  %lk  %ll  %load  %load_ext  %loadpy  %logoff  %logon  %logstart  %logstate  %logstop  %ls  %lsmagic  %lx  %macro  %magic  %man  %matplotlib  %mkdir  %more  %mv  %notebook  %page  %pastebin  %pdb  %pdef  %pdoc  %pfile  %pinfo  %pinfo2  %pip  %popd  %pprint  %precision  %profile  %prun  %psearch  %psource  %pushd  %pwd  %pycat  %pylab  %qtconsole  %quickref  %recall  %rehashx  %reload_ext  %rep  %rerun  %reset  %reset_selective  %rm  %rmdir  %run  %save  %sc  %set_env  %shell  %store  %sx  %system  %tb  %tensorflow_version  %time  %timeit  %unalias  %unload_ext  %who  %who_ls  %whos  %xdel  %xmode\n",
+              "\n",
+              "Available cell magics:\n",
+              "%%!  %%HTML  %%SVG  %%bash  %%bigquery  %%capture  %%debug  %%file  %%html  %%javascript  %%js  %%latex  %%perl  %%prun  %%pypy  %%python  %%python2  %%python3  %%ruby  %%script  %%sh  %%shell  %%svg  %%sx  %%system  %%time  %%timeit  %%writefile\n",
+              "\n",
+              "Automagic is ON, % prefix IS NOT needed for line magics."
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -90,9 +247,9 @@
         "colab_type": "text"
       },
       "source": [
-        "よく使われるラインマジックについては説明済みなのでこのノートブックではセルマジックについて重点的に説明する。\n",
+        "このノートブックではセルマジックについて重点的に説明する。\n",
         "\n",
-        "まず、`matplotlib`と`numpy`を導入して、数値計算とグラフ描画ができるようにしよう。"
+        "準備として、`matplotlib`と`numpy`を導入して、数値計算とグラフ描画ができるようにしよう。"
       ]
     },
     {
@@ -144,7 +301,7 @@
       "source": [
         "%timeit np.linalg.eigvals(np.random.rand(100,100))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +327,7 @@
         "%%timeit a = np.random.rand(100, 100)\n",
         "np.linalg.eigvals(a)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +345,7 @@
         "colab_type": "text"
       },
       "source": [
-        "キャプチャー(`%%capture`)マジックはpythonコードの出力(`stdout/err`)をキャプチャーし、不要な場合は処分したり、使うために変数に格納したりできる。"
+        "キャプチャー(`%%capture`)マジックはpythonコードの出力(`stdout/err`)をキャプチャーし、不要な場合は捨てる処理を行い、、使う場合は変数に格納したりできる。"
       ]
     },
     {
@@ -205,7 +362,7 @@
         "print('Hello stdout')\n",
         "print('and stderr', file=sys.stderr)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +379,7 @@
       "source": [
         "capt.stdout, capt.stderr"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -252,7 +409,7 @@
       "source": [
         "capt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +454,7 @@
         "%%writefile foo.py\n",
         "print('Hello world')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +479,7 @@
       "source": [
         "%run foo"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,13 +509,9 @@
       "source": [
         "# Python以外のプログラミング言語を使うためのマジック\n",
         "\n",
-        "IPython has a `%%script` cell magic, which lets you run a cell in a subprocess of any interpreter on your system, such as: bash, ruby, perl, zsh, R, etc.\n",
+        "セルマジック`%%script`はbash, ruby, perl, zsh, R, などの言語をセルのサブプロセスとして実行できるようにする。\n",
         "\n",
-        "It can even be a script of your own, which expects input on stdin.\n",
-        "\n",
-        "To use it, simply pass a path or shell command to the program you want to run on the `%%script` line, and the rest of the cell will be run by that script, and stdout/err from the subprocess are captured and displayed.\n",
-        "\n",
-        "In \\[10\\]:\n"
+        "使うには`%%script`の同じ行に使いたいプログラミング言語のパスもしくはシェルコマンドを書く。セルのその後の内容はその言語またはシェルで解釈、実行され、そのサブプロセスの結果はセルによってキャプチャーされセルの出力として表示される。"
       ]
     },
     {
@@ -370,14 +523,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "52d0e1a4-014d-4bbf-88e0-c5af3bf3787a"
+        "outputId": "94de67d2-f5cb-4698-b1f5-b59a8c26f8b3"
       },
       "source": [
         "%%script python\n",
         "import sys\n",
         "print ('hello from Python %s' % sys.version)"
       ],
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,35 +543,32 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "m6KU9oaFYv-8",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "\n",
-        "hello from Python 2.7.2 (default, Oct 11 2012, 20:14:37) \n",
-        "\\[GCC 4.2.1 Compatible Apple Clang 4.0 (tags/Apple/clang-418.0.60)\\]\n",
-        "\n",
-        "In \\[11\\]:\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "SqjJdoNaY2dD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b32b1715-c5bb-4525-bce0-e7e8f7e5c9ca"
       },
       "source": [
         "%%script python3\n",
         "import sys\n",
         "print('hello from Python: %s' % sys.version)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello from Python: 3.6.9 (default, Apr 18 2020, 01:56:04) \n",
+            "[GCC 8.4.0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -427,16 +577,9 @@
         "colab_type": "text"
       },
       "source": [
+        "bash, ruby, perl, javascript, などについてはセルコマンドとしてaliasが用意されている。\n",
         "\n",
-        "\n",
-        "hello from Python: 3.3.1 (v3.3.1:d9893d13c628, Apr  6 2013, 11:07:11) \n",
-        "\\[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)\\]\n",
-        "\n",
-        "IPython also creates aliases for a few common interpreters, such as bash, ruby, perl, etc.\n",
-        "\n",
-        "These are all equivalent to `%%script <name>`\n",
-        "\n",
-        "In \\[12\\]:\n"
+        "`%%script <name>`と書いても同じ。"
       ]
     },
     {
@@ -447,8 +590,9 @@
         "colab": {}
       },
       "source": [
-        "%%ruby\n",
-        "puts \"Hello from Ruby #{RUBY\\_VERSION}\""
+        "# %%ruby\n",
+        "# puts \"Hello from Ruby #{RUBY_VERSION}\"\n",
+        "# エラーになる \"Couldn't find program 'ruby'\""
       ],
       "execution_count": null,
       "outputs": []
@@ -458,44 +602,36 @@
       "metadata": {
         "id": "tRTGTzwaZAeU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "83ac7323-3285-4383-e884-452d763d29a1"
       },
       "source": [
-        "%%bash\n",
+        "%%script bash\n",
         "echo \"hello from $BASH\""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello from /bin/bash\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qeHUVG9iY8cP",
+        "id": "lbhGpxEZUqcN",
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "In \\[13\\]:\n",
-        "\n",
-        "\n",
-        "\n",
-        "hello from /usr/local/bin/bash\n"
+        "# いまここ"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nWRCjMK4ZIjz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -504,6 +640,10 @@
         "colab_type": "text"
       },
       "source": [
+        "# 練習問題: インプットされた行数を数えるスクリプトを書く\n",
+        "\n",
+        "`lnum.py`というファイルを書いて、次に示されるように云々。\n",
+        "\n",
         "\n",
         "Exercise: write your own script that numbers input lines[¶](#Exercise:-write-your-own-script-that-numbers-input-lines)\n",
         "----------------------------------------------------------------------------------------------------------------------\n",
