Colaboratory を使用して作成しました

--- a/030kaggle03bool.ipynb
+++ b/030kaggle03bool.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle03bool.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMplkJrqN/BJfhqPtZiWlnQ",
+      "authorship_tag": "ABX9TyPIpEcVDely/ebQiUc8t45/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "l1D1jCY2hxoe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# kaggle03bool.ipynb"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GpyiaEBut93i",
         "colab_type": "text"
       },
       "source": [
-        "# はじめに\n",
-        "cf. https://www.kaggle.com/colinmorris/booleans-and-conditionals"
+        "# メモ\n",
+        "\n",
+        "1. 元ファイル ( https://www.kaggle.com/colinmorris/booleans-and-conditionals)\n"
       ]
     },
     {
@@ -44,7 +55,7 @@
       },
       "source": [
         "# ブール型\n",
-        "ブール型の値はTrueとFalseだけです。\n"
+        "ブール型の値はTrueとFalseだけ。\n"
       ]
     },
     {
