Colaboratory を使用して作成しました

--- a/nbconvert.ipynb
+++ b/nbconvert.ipynb
@@ -6,7 +6,7 @@
       "name": "nbconvert.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPq/APLEp/1Aj8AZzWOz2R",
+      "authorship_tag": "ABX9TyOBvVKgm8q5SdU4bMtInvST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/nbconvert.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/nbconvert.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,7 +55,7 @@
       "source": [
         "\n",
         "# はてなでの実験結果\n",
-        "このファイルはhttps://github.com/kalz2q/myjupyternotebooks/blob/master/nbconvert.ipynb です。これをColabで編集して、GitHubに保存するときにできる`Open in Colab`というボタンがあります。\n",
+        "このノートをColabで編集して、GitHubに保存するときにできる`Open in Colab`というボタンがあります。\n",
         "\n",
         "`nbconvert`してできた`.md`ファイルをはてなに貼り付けると、`Open in Colab`ボタンも貼り付けられますが、リンクしているのははてなの記事ではなく、もとのGitHubのファイルです。まああたりまえか。\n",
         "\n",
