Colaboratory を使用して作成しました

--- a/colabfeatures.ipynb
+++ b/colabfeatures.ipynb
@@ -22,7 +22,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/01_colabfeatures001.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/colabfeatures.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mg1PkaJkuoGE",
+        "colab_type": "text"
+      },
+      "source": [
+        "# colabfeatures.ipynb"
       ]
     },
     {
@@ -183,7 +193,7 @@
         "time.sleep(30) # sleep for a while; interrupt me!\n",
         "print(\"Done Sleeping\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,7 +278,7 @@
         "foo = !echo -e '$message\\n$message\\t$message'\n",
         "foo"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +329,7 @@
         "%%html\n",
         "<marquee style='width: 30%; color: slategrey;' behavior=\"alternate\"><b>Whee!</b></marquee>"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -356,7 +366,7 @@
         "  <rect x=\"180\" y=\"110\" width=\"250\" height=\"250\" rx=\"40\" style=\"fill:blue; stroke:black; fill-opacity:0.5;\" />\n",
         "</svg></div>"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
