Colaboratory を使用して作成しました

--- a/colab_github_demo.ipynb
+++ b/colab_github_demo.ipynb
@@ -22,7 +22,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/colab_github_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/colab_github_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "el0xlmAcwLHN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# colab_github_demo.ipynb"
       ]
     },
     {
