Colaboratory を使用して作成しました

--- a/cellmagic.ipynb
+++ b/cellmagic.ipynb
@@ -6,7 +6,7 @@
       "name": "cellmagic.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP1rjPn5lp8BWkIaDf3jl/F",
+      "authorship_tag": "ABX9TyPSIdknHMxjbSbGQVLuJjRQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,17 +22,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kalz2q/myjupyternotebooks/blob/master/cellmagic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/cellmagic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cxmGErljPUxv",
+        "id": "CYn3DCy6wqde",
         "colab_type": "text"
       },
       "source": [
-        "# The cell magics in IPython"
+        "# cellmagic.ipynb"
       ]
     },
     {
@@ -678,7 +678,7 @@
         "echo \"hi, stdout\"\n",
         "echo \"hello, stderr\" >&2"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +708,7 @@
         "echo \"hi, stdout\"\n",
         "echo \"hello, stderr\" >&2"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -726,7 +726,7 @@
         "print(error)\n",
         "print(output)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +783,7 @@
         "    STDOUT.flush\n",
         "end"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -825,7 +825,7 @@
       "source": [
         "python_lines"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
       "source": [
         "print(python_lines.read())"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
